--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/13239-removebg-preview.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css'>
     <link rel="stylesheet" href="style.css">
@@ -18,7 +19,6 @@
         <ul>
             <a href="#"><li>Home</li></a>
             <a href="#"><li>About</li></a>
-            <a href="#"><li>Services</li></a>
             <a href="#"><li>Team</li></a>
             <a href="#"><li>Projects</li></a>
             <a href="#"><li>Contact</li></a>
@@ -127,11 +127,18 @@
                     </svg>                  
                     <svg class="back-blue-3" width="497" height="292" viewBox="0 0 497 292" fill="none" xmlns="http://www.w3.org/2000/svg">
                         <path d="M7.07175 158.172C-19.0148 80.4252 38.8318 0 120.839 0H422C463.421 0 497 33.5786 497 75V217C497 258.421 463.421 292 422 292H123.901C80.9308 292 42.7643 264.549 29.0954 223.81L7.07175 158.172Z" fill="#2639ED"/>
-                        </svg>                  
+                        </svg>  
+                <div class="newslatter-box">
+                <form id="email-box">       
                     <h1 class="text-h1-4" >Subscribe Newsletter</h1>
-                    <p class="text-information-5" >I will update news and promotion service not spam</p>
-                    <input class="input" type="text" placeholder="Enter your Email Address">
-                    <input class="input-contact" type="submit" value="Contact Now">
+                    <p class="text-information-5" >I will update news and promotion service not spam</p>       
+                <div class="form-box">           
+                    <input class="input" type="text" id="email" placeholder="Enter your Email Address">
+                    <button class="input-contact" type="submit">Contact Now</button>
+                </div>
+                <small id="textForm"></small>
+                </form>
+            </div>   
             </section>
             </section>
         </aside>
@@ -251,6 +258,7 @@
                        <li><a href="#">Business</a></li>
                </div>
         </footer>
+        <script src="js/news.js"></script>
 </body>
 </html>
 
